Wed Apr 15 19:51:11 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* import.c: check for bg variations when importing mat.

Sun Apr  5 17:16:41 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkgame.c: add labels to the manual dice widget

Fri Apr  3 22:04:43 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: Use the player's dice color to chose who wins
	the opening roll with manual dice.

Fri Apr  3 21:45:17 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c, gtkprefs.c, import.c, multithread.c, play.c,
	relational.c, text.c: minor compile stuff, an error in the last
	checkin, and ifdef WIN32 the align in multithread.c

Fri Apr  3 13:59:50 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkboard.c, gtkchequer.c, play.c: CommandMove didn't
	accept moves of type 25/16.

Thu Apr  2 23:33:25 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: hopefully fix a crash related to canceling of manual dice

Thu Apr  2 22:32:14 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: fix a crash (assert in getCubeDecisionOrdering) when
	updating the current game annotions. 

Thu Apr  2 10:13:47 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: hint - don't update annotation when working through tutor

Wed Apr  1 17:41:13 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: display options was added twice and rng was update
	even if unchanged 

Mon Mar 30 13:52:31 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: rc files should be added before gtk_init

Mon Mar 30 10:46:29 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: add highligting to the skill label when take/drop

Sun Mar 29 21:25:51 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c: Avoid calling PythonNextTurn in PythonCommand, since
	PythonNextTurn always plays the next turn, and the command doesn't
	imply that.

Sun Mar 29 15:50:38 CEST 2009 Christian Anthon <anthon@kiku.dk>
